# ChineseAnimalChess

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/animalchess/chess/: board.py  pieces.py  player.py  utils.py
test/: test_board.py  test_clones.py  test_games.py  test_list_actions.py  test_pieces.py  test_utils.py
