[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "animalchess"
version = "0.0.1"
authors = [
    {name = "Kwan Yuet Stephen Ho", email = "stephenhky@yahoo.com.hk"}
]
description = "Chinese Animal Chess"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
keywords = ["animal chess", "pygame"]
requires-python = ">=3.11"
classifiers = [
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
]
dependencies = ["numpy", "loguru"]

[project.urls]
Repository = "https://github.com/stephenhky/ChineseAnimalChess"
Issues = "https://github.com/stephenhky/ChineseAnimalChess/issues"

[tool.setuptools]
packages = ["animalchess"]
zip-safe = false
package-dir = {"" = "src"}

[project.optional-dependencies]
test = ["pytest"]
